Fixed a little clipping issue
I'm using bootstrap in my project and the box-sizing: border-box was causing the flipster reflections to be hidden, as well as clipping off the bottom corner of the next & previous items in the list

--- a/src/css/jquery.flipster.css
+++ b/src/css/jquery.flipster.css
@@ -29,6 +29,9 @@
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
 .flip-item {
   position: absolute;
